# VPlayer_lib2

./: .gitignore  .gitmodules  settings.gradle
VPlayerExample/: build.gradle
VPlayerExample/src/main/: AndroidManifest.xml
VPlayerExample/src/main/java/com/matthewn4444/vplayerexample/: BaseActivity.java  MainActivity.java
VPlayerExample/src/main/res/drawable/: seekbar_thumb.xml
VPlayerExample/src/main/res/layout/: activity_main.xml
VPlayerExample/src/main/res/values/: dimen.xml  strings.xml  styles.xml
VPlayerLibrary2/: .gitignore  CMakeLists.txt  build.gradle  shared_ndk_helper.gradle
VPlayerLibrary2/src/main/: AndroidManifest.xml
VPlayerLibrary2/src/main/cpp/player/: ASSBitmap.cpp  ASSBitmap.h  ASSRenderer.cpp  ASSRenderer.h  AVComponentStream.cpp  AVComponentStream.h  AudioRenderer.cpp  AudioRenderer.h  AudioStream.cpp  AudioStream.h  AvFramePool.cpp  AvFramePool.h  BasicYUVConverter.cpp  BasicYUVConverter.h  Clock.cpp  Clock.h  Frame.cpp  Frame.h  FrameQueue.cpp  FrameQueue.h  IAudioRenderer.h  IPlayerCallback.h  IVideoRenderer.h  ImageSubHandler.cpp  ImageSubHandler.h  JniCallbackHandler.cpp  JniCallbackHandler.h  JniVideoRenderer.cpp  JniVideoRenderer.h  PacketQueue.cpp  PacketQueue.h  Player.cpp  Player.h  SSAHandler.cpp  SSAHandler.h  StreamComponent.cpp  StreamComponent.h  SubtitleFrameQueue.cpp  SubtitleFrameQueue.h  SubtitleStream.cpp  (+8 more)
VPlayerLibrary2/src/main/cpp/player/android/: AudioRenderer.h  JniCallbackHandler.cpp  JniCallbackHandler.h  JniHelper.cpp  JniHelper.h  JniVideoRenderer.cpp  JniVideoRenderer.h  player_jni.cpp  subtitles_jni.cpp
VPlayerLibrary2/src/main/java/com/matthewn4444/vplayerlibrary2/: ASSBitmap.java  ASSFrame.java  ASSRenderer.java  ASSTrack.java  VPlayer2NativeController.java  VPlayer2SurfaceView.java  VPlayerException.java  VPlayerListener.java  VPlayerView.java
ffmpeg_build/: README.md  build_android.sh  build_ffmpeg.sh  config_and_build.sh
gradle/wrapper/: gradle-wrapper.properties
